fix: dark mode transition mode and duration changed.

--- a/src/app/ui/components/home/home.component.sass
+++ b/src/app/ui/components/home/home.component.sass
@@ -23,7 +23,7 @@ mat-card.light-mode
     color: #162428
 
 :not(.dark-mode-preloading)
-    transition: all 0.2s linear
+    transition: all 0.5s ease-in
 
 #createdDate
     width: 180px
