--- a/src/styles.sass
+++ b/src/styles.sass
@@ -12,6 +12,7 @@ body
 
 body
     font-family: Roboto, "Helvetica Neue", sans-serif
+    transition: all 0.5s ease-in
 
 body.dark-mode
     background-color: #131e22
@@ -22,4 +23,3 @@ body.light-mode
     color: #162428
 
 body:not(.dark-mode-preloading)
-    transition: all 0.2s linear
